# pre-commit

./: .pre-commit-hooks.yaml  README.md  setup.cfg
pre-commit-script-hooks/: trivy-vulns.sh
pre_commit_python_hooks/: build_provider.py  check_latest_in_module_source.py  cleanup_tf_cache.py  remove_provider.py  requirements_txt_fixer.py
