[metadata]
name = pre_commit_python_hooks

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml >=0.15
    tomli >=1.1.0;python_version <"3.11"

python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    requirements-txt-fixer = pre_commit_python_hooks.requirements_txt_fixer:main
    tf-module-checker = pre_commit_python_hooks.check_latest_in_module_source:main
    provider-gen = pre_commit_python_hooks.build_provider:main
    remove-provider = pre_commit_python_hooks.remove_provider:main
    tf-cache-clean = pre_commit_python_hooks.cleanup_tf_cache:main

[bdist_wheel]
universal = True
